New desktop look with recent request from client

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="description" content="Ян Востров - мастер реставрации деревянных изделий">
+    <meta name="description" content="Мастера реставрации деревянных изделий">
     <meta name="keywords" content="реставрация, циклёвка, дерево, работы по дереву, деревообработка, паркет, брус, мастер, специалист">
     <meta name="author" content="Ян Востров">
   </head>
