--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+    <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#24292e">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="Мастера реставрации деревянных изделий">
     <meta name="keywords" content="реставрация, циклёвка, дерево, работы по дереву, деревообработка, паркет, брус, мастер, специалист">
-    <meta name="author" content="Ян Востров">
+    <meta name="author" content="Ян Давыдов">
   </head>
   <body>
     <noscript>
