--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,14 @@
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/93507021" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZJEQMD98G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2ZJEQMD98G');
+</script>
 </html>
